--- a/config/configs.json
+++ b/config/configs.json
@@ -1,4 +1,119 @@
 {
+    "DS720+": {
+        "satadom": 2,
+        "dt": true,
+        "synoinfo": {
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
+            "buzzeroffen": "0xffff",
+            "rss_server": "http://example.com/null.xml",
+            "rss_server_ssl": "https://example.com/null.xml",
+            "rss_server_v2": "https://example.com/null"
+        },
+        "base_cmdline": {
+            "sn": "",
+            "vid": "0x46f4",
+            "pid": "0x0001",
+            "mac1": "",
+            "netif_num": 1,
+            "syno_hw_version": "DS720+",
+            "intel_iommu": "igfx_off",
+            "HddEnableDynamicPower": 1,
+            "vender_format_version": 2,
+            "synoboot2": null,
+            "syno_ttyS0": "serial,0x3f8",
+            "syno_ttyS1": "serial,0x2f8",
+            "elevator": "elevator"
+        },
+        "platforms": {
+            "6.2.4-25556": "geminilake-4.4.59",
+            "7.0.1-42218": "geminilake-4.4.180",
+            "7.1.0-42661": "geminilake-4.4.180",
+            "7.1.1-42962": "geminilake-4.4.180",
+            "7.2.0-64551": "geminilake-4.4.302"
+        },
+        "ramdisk": {
+            "6.2.4-25556": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script-OLD-name.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-LOWER.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ],
+            "7.0.1-42218": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ],
+            "7.1.0-42661": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-42661.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ],
+            "7.1.1-42962": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ],
+            "7.2.0-64551": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd-64216.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ]
+        }
+    },
+    "DS723+": {
+        "satadom": 2,
+        "dt": true,
+        "synoinfo": {
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
+            "buzzeroffen": "0xffff",
+            "rss_server": "http://example.com/null.xml",
+            "rss_server_ssl": "https://example.com/null.xml",
+            "rss_server_v2": "https://example.com/null"
+        },
+        "base_cmdline": {
+            "sn": "",
+            "vid": "0x46f4",
+            "pid": "0x0001",
+            "mac1": "",
+            "netif_num": 1,
+            "syno_hw_version": "DS723+",
+            "HddEnableDynamicPower": 1,
+            "vender_format_version": 2,
+            "synoboot2": null,
+            "syno_ttyS0": "serial,0x3f8",
+            "syno_ttyS1": "serial,0x2f8"
+        },
+        "platforms": {
+            "7.1.1-42962": "r1000-4.4.180",
+            "7.2.0-64551": "r1000-4.4.302"
+        },
+        "ramdisk": {
+            "7.1.1-42962": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ],
+            "7.2.0-64551": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd-64216.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ]
+        }
+    },
     "#DS916+": {
         "satadom": 2,
         "dt": false,
@@ -1140,6 +1255,146 @@
             ]
         }
     },
+    "RS1221+": {
+        "satadom": 2,
+        "dt": true,
+        "synoinfo": {
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
+            "rss_server": "http://example.com/null.xml",
+            "rss_server_ssl": "https://example.com/null.xml",
+            "rss_server_v2": "https://example.com/null"
+        },
+        "base_cmdline": {
+            "sn": "",
+            "vid": "0x46f4",
+            "pid": "0x0001",
+            "mac1": "",
+            "netif_num": 1,
+            "syno_hw_version": "RS1221+",
+            "intel_iommu": "igfx_off",
+            "HddEnableDynamicPower": 1,
+            "vender_format_version": 2,
+            "synoboot2": null,
+            "syno_ttyS0": "serial,0x3f8",
+            "syno_ttyS1": "serial,0x2f8",
+            "elevator": "elevator"
+        },
+        "platforms": {
+            "6.2.4-25556": "v1000-4.4.59",
+            "7.0.1-42218": "v1000-4.4.180",
+            "7.1.0-42661": "v1000-4.4.180",
+            "7.1.1-42962": "v1000-4.4.180",
+            "7.2.0-64551": "v1000-4.4.302"
+        },
+        "ramdisk": {
+            "6.2.4-25556": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script-OLD-name.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-LOWER.patch"
+            ],
+            "7.0.1-42218": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script.patch"
+            ],
+            "7.1.0-42661": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-42661.patch"
+            ],
+            "7.1.1-42962": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ],
+            "7.2.0-64551": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd-64216.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch"
+            ]
+        }
+    },
+    "RS1619xs+": {
+        "satadom": 1,
+        "dt": false,
+        "synoinfo": {
+            "maxdisks": "24",
+            "internalportcfg": "0xffff",
+            "esataportcfg": "0x00",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_oob_ctl": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
+            "rss_server": "http://example.com/null.xml",
+            "rss_server_ssl": "https://example.com/null.xml",
+            "rss_server_v2": "https://example.com/null"
+        },
+        "base_cmdline": {
+            "sn": "",
+            "vid": "0x46f4",
+            "pid": "0x0001",
+            "mac1": "",
+            "netif_num": 1,
+            "syno_hw_version": "RS1619xs+",
+            "syno_hdd_powerup_seq": 0,
+            "HddHotplug": 0,
+            "vender_format_version": 2,
+            "syno_hdd_detect": 0,
+            "elevator": "elevator"
+        },
+        "platforms": {
+            "6.2.4-25556": "broadwellnk-4.4.59",
+            "7.0.1-42218": "broadwellnk-4.4.180",
+            "7.1.0-42661": "broadwellnk-4.4.180",
+            "7.1.1-42962": "broadwellnk-4.4.180",
+            "7.2.0-64551": "broadwellnk-4.4.302"
+        },
+        "ramdisk": {
+            "6.2.4-25556": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script-OLD-name.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-LOWER.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports-OLD-name.patch"
+            ],
+            "7.0.1-42218": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports-OLD-name.patch"
+            ],
+            "7.1.0-42661": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-42661.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ],
+            "7.1.1-42962": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ],
+            "7.2.0-64551": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd-64216.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ]
+        }
+    },
     "RS3413xs+": {
         "satadom": 1,
         "dt": false,
@@ -1295,6 +1550,156 @@
             "SataPortMap": "1",
             "DiskIdxMap": "0",
             "syno_hw_version": "RS4021xs+",
+            "syno_hdd_powerup_seq": 0,
+            "HddHotplug": 0,
+            "vender_format_version": 2,
+            "syno_hdd_detect": 0,
+            "elevator": "elevator"
+        },
+        "platforms": {
+            "6.2.4-25556": "broadwellnk-4.4.59",
+            "7.0.1-42218": "broadwellnk-4.4.180",
+            "7.1.0-42661": "broadwellnk-4.4.180",
+            "7.1.1-42962": "broadwellnk-4.4.180",
+            "7.2.0-64551": "broadwellnk-4.4.302"
+        },
+        "ramdisk": {
+            "6.2.4-25556": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script-OLD-name.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-LOWER.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports-OLD-name.patch"
+            ],
+            "7.0.1-42218": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports-OLD-name.patch"
+            ],
+            "7.1.0-42661": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-42661.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ],
+            "7.1.1-42962": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ],
+            "7.2.0-64551": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd-64216.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ]
+        }
+    },
+    "SA3400": {
+        "satadom": 1,
+        "dt": false,
+        "synoinfo": {
+            "maxdisks": "24",
+            "internalportcfg": "0xffff",
+            "esataportcfg": "0x00",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_oob_ctl": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
+            "rss_server": "http://example.com/null.xml",
+            "rss_server_ssl": "https://example.com/null.xml",
+            "rss_server_v2": "https://example.com/null"
+        },
+        "base_cmdline": {
+            "sn": "",
+            "vid": "0x46f4",
+            "pid": "0x0001",
+            "mac1": "",
+            "netif_num": 1,
+            "syno_hw_version": "SA3400",
+            "syno_hdd_powerup_seq": 0,
+            "HddHotplug": 0,
+            "vender_format_version": 2,
+            "syno_hdd_detect": 0,
+            "elevator": "elevator"
+        },
+        "platforms": {
+            "6.2.4-25556": "broadwellnk-4.4.59",
+            "7.0.1-42218": "broadwellnk-4.4.180",
+            "7.1.0-42661": "broadwellnk-4.4.180",
+            "7.1.1-42962": "broadwellnk-4.4.180",
+            "7.2.0-64551": "broadwellnk-4.4.302"
+        },
+        "ramdisk": {
+            "6.2.4-25556": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script-OLD-name.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-LOWER.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports-OLD-name.patch"
+            ],
+            "7.0.1-42218": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports-OLD-name.patch"
+            ],
+            "7.1.0-42661": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-42661.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ],
+            "7.1.1-42962": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ],
+            "7.2.0-64551": [
+                "@@@COMMON@@@/patch/ramdisk-001-disable-root-pwd-64216.patch",
+                "@@@COMMON@@@/patch/ramdisk-002-init-script.patch",
+                "@@@COMMON@@@/patch/ramdisk-003-post-init-script-noatime.patch",
+                "@@@COMMON@@@/patch/ramdisk-004-network-hosts.patch",
+                "@@@COMMON@@@/patch/ramdisk-005-disable-disabled-ports.patch"
+            ]
+        }
+    },
+    "#SA3600": {
+        "satadom": 1,
+        "dt": false,
+        "synoinfo": {
+            "maxdisks": "24",
+            "internalportcfg": "0xffff",
+            "esataportcfg": "0x00",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_oob_ctl": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
+            "rss_server": "http://example.com/null.xml",
+            "rss_server_ssl": "https://example.com/null.xml",
+            "rss_server_v2": "https://example.com/null"
+        },
+        "base_cmdline": {
+            "sn": "",
+            "vid": "0x46f4",
+            "pid": "0x0001",
+            "mac1": "",
+            "netif_num": 1,
+            "syno_hw_version": "SA3600",
             "syno_hdd_powerup_seq": 0,
             "HddHotplug": 0,
             "vender_format_version": 2,
